--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "transpile": "babel --presets=env,react src --out-dir bin",
     "predeploy": "npm run transpile",
-    "deploy": "sls deploy function -f app",
+    "deploy": "serverless deploy -v",
     "postdeploy": "rm -rf bin",
-    "logs": "serverless logs -f app -t"
+    "predeploy:function": "npm run transpile",
+    "deploy:function": "sls deploy function -f app",
+    "postdeploy:function": "rm -rf bin",
+    "logs": "serverless logs -f app -t",
+    "bundle": "webpack",
+    "start":
+      "concurrently --kill-others \"webpack-dev-server\" \"nodemon index.js --exec babel-node --presets=env,react\""
   },
   "keywords": [],
   "author": "",
@@ -22,7 +28,13 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "concurrently": "^3.5.1",
+    "nodemon": "^1.17.1",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0"
   }
 }
