--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "postdeploy:function": "rm -rf bin",
     "logs": "serverless logs -f app -t",
     "bundle": "webpack",
-    "start":
-      "concurrently --kill-others \"webpack-dev-server\" \"nodemon index.js --exec babel-node --presets=env,react\""
+    "start": "concurrently --kill-others \"webpack-dev-server\" \"nodemon index.js --exec babel-node --presets=env,react\""
   },
   "keywords": [],
   "author": "",
@@ -35,6 +34,7 @@
     "nodemon": "^1.17.1",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0"
+    "webpack-dev-server": "^3.1.0",
+    "webpack-s3-plugin": "^1.0.0-rc.0"
   }
 }
