--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "transpile": "babel --presets=env,react src --out-dir bin",
     "predeploy": "npm run transpile",
     "deploy": "serverless deploy -v",
@@ -15,6 +15,9 @@
     "logs": "serverless logs -f app -t",
     "bundle": "webpack",
     "start": "concurrently --kill-others \"webpack-dev-server\" \"nodemon index.js --exec babel-node --presets=env,react\""
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>/setupTesting.js"
   },
   "keywords": [],
   "author": "",
@@ -27,11 +30,17 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.1",
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "concurrently": "^3.5.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "^22.4.2",
     "nodemon": "^1.17.1",
+    "regenerator-runtime": "^0.11.1",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0",
