--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "serverless-http": "^1.5.3"
   },
   "devDependencies": {
+    "aws-sdk": "^2.205.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-jest": "^22.4.1",
@@ -43,7 +44,6 @@
     "regenerator-runtime": "^0.11.1",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0",
-    "webpack-s3-plugin": "^1.0.0-rc.0"
+    "webpack-dev-server": "^3.1.0"
   }
 }
