--- a/serverless.yml
+++ b/serverless.yml
@@ -18,6 +18,7 @@ functions:
     handler: index.handler
     environment:
       IN_LAMBDA: 'true'
+      BUNDLE_URL: https://s3-us-west-2.amazonaws.com/${env:ASSETS_BUCKET}/bundle.js
     events:
       - http: ANY /
       - http: 'ANY {proxy+}'
