--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "postdeploy:function": "rm -rf bin",
     "logs": "serverless logs -f app -t",
     "bundle": "webpack",
-    "start":
-      "concurrently --kill-others \"webpack-dev-server\" \"nodemon index.js --exec babel-node --presets=env,react\""
+    "start": "concurrently --kill-others \"webpack-dev-server\" \"nodemon index.js --exec babel-node --presets=env,react\""
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/setupTesting.js"
@@ -27,6 +26,8 @@
     "express": "^4.16.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-config": "^1.0.0-beta.4",
+    "react-router-dom": "^4.2.2",
     "serverless-http": "^1.5.3"
   },
   "devDependencies": {
