--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "postdeploy:function": "rm -rf bin",
     "logs": "serverless logs -f app -t",
     "bundle": "webpack",
-    "start": "concurrently --kill-others \"webpack-dev-server\" \"nodemon index.js --exec babel-node --presets=env,react\""
+    "start":
+      "concurrently --kill-others \"webpack-dev-server\" \"nodemon index.js --exec babel-node --presets=env,react\""
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/setupTesting.js"
