--- a/serverless.yml
+++ b/serverless.yml
@@ -10,7 +10,7 @@ package:
 provider:
   name: aws
   runtime: nodejs6.10
-  stage: dev
+  stage: ${opt:stage, 'dev'}
   region: us-east-1
 
 functions:
