--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
     "test": "jest",
     "transpile": "babel --presets=env,react src --out-dir bin",
     "predeploy": "npm run transpile && npm run bundle",
-    "deploy": "node utils/uploadToS3.js && serverless deploy -v",
+    "deploy": "node ./deploy.js",
     "postdeploy": "rm -rf bin",
     "predeploy:function": "npm run transpile",
     "deploy:function": "sls deploy function -f app",
     "postdeploy:function": "rm -rf bin",
     "logs": "serverless logs -f app -t",
     "bundle": "webpack",
-    "start":
-      "concurrently --kill-others \"webpack-dev-server\" \"nodemon index.js --exec babel-node --presets=env,react\""
+    "start": "concurrently --kill-others \"webpack-dev-server\" \"nodemon index.js --exec babel-node --presets=env,react\""
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/setupTesting.js"
@@ -45,6 +44,7 @@
     "jest": "^22.4.2",
     "nodemon": "^1.17.1",
     "regenerator-runtime": "^0.11.1",
+    "shelljs": "^0.8.1",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0"
