--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "postdeploy:function": "rm -rf bin",
     "logs": "serverless logs -f app -t",
     "bundle": "webpack",
-    "start": "concurrently --kill-others \"webpack-dev-server\" \"nodemon index.js --exec babel-node --presets=env,react\""
+    "webpack-dev": "webpack-dev-server",
+    "babel-node": "nodemon --exec \"babel-node index.js\"",
+    "start":
+      "concurrently --kill-others \"npm run webpack-dev\" \"npm run babel-node\""
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/setupTesting.js"
@@ -23,11 +26,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^8.2.0",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "css-loader": "^0.28.11",
     "express": "^4.16.2",
+    "glob": "^7.1.2",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.8.3",
+    "normalize.css": "^8.0.0",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-loader": "^2.1.3",
+    "raw-loader": "^0.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
+    "sass-loader": "^6.0.7",
     "serverless-http": "^1.5.3"
   },
   "devDependencies": {
@@ -45,7 +59,7 @@
     "nodemon": "^1.17.1",
     "regenerator-runtime": "^0.11.1",
     "shelljs": "^0.8.1",
-    "webpack": "^4.0.1",
+    "webpack": "^4.3.0",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0"
   }
